Title now changes to name instead of username

--- a/assets/index.css
+++ b/assets/index.css
@@ -454,7 +454,7 @@ body {
       rgba(10, 10, 10, 0.6),
       rgb(10, 10, 10, 1)
     ),
-    url("https://images.unsplash.com/photo-1547138666-12a241be3c2d?w&#x3D;1300");
+    url("https://source.unsplash.com/y54gnzC86lw");
   --background-background: linear-gradient(
       0deg,
       rgba(10, 10, 10, 1),
